<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:text="@string/first_button"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:text="@string/second_button"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:text="@string/third_button"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:text="@string/fourth_button"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:text="@string/fifth_button"
        android:textColor="@color/colorAccent" />
</LinearLayout>